--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "spa",
-  "version": "1.0.0",
+  "name": "Site Botike",
+  "version": "0.9.1",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "Botike - robôs que falam com pessoas e negócios",
   "license": "ISC",
   "description": "",
   "dependencies": {
